<resources>
    <string name="app_name">RegistrationApp</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="info">Your Info</string>
    <string name="education">Educational Info</string>
    <string name="edu">Education</string>
    <string name="yop">Year Of Passing</string>
    <string name="grade">Grade</string>
    <string name="prof">Professional Info</string>
    <string name="exp">Experience</string>
    <string name="designation">Designation</string>
    <string name="domain">Domain</string>
    <string name="address">Address</string>
    <string name="landmark">Landmark</string>
    <string name="city">City</string>
    <string name="state">Enter Your State</string>
    <string name="pin">Pin Code</string>
    <string name="youraddress">Your Address</string>

    <string-array name="qualification">
        <item>Post Graduate</item>
        <item>Graduate</item>
        <item>HSC/Diploma</item>
        <item>SSC</item>
    </string-array>

    <string-array name="designation">
        <item>Software Developer</item>
        <item>Trainee Engineer</item>
        <item>Database Administrator</item>
        <item>Business Analyst</item>
        <item>Project Manager</item>
    </string-array>

    <string-array name="domain">
        <item>Android/IOS</item>
        <item>FullStack Development</item>
        <item>FrontEnd Development</item>
        <item>BackEnd Development</item>
        <item>Cloud Computing Services</item>
    </string-array>

</resources>