<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="16dp">

        <TextView  android:id="@+id/tvregister"
            android:text="@string/register"
            style="@style/textView_bg"
            android:textColor="@android:color/black"
            android:layout_marginTop="24dp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="10dp"
            app:cardCornerRadius="8dp"
            app:cardBackgroundColor="@color/white"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            >

            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_image"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:src="@drawable/user_symbol"
                android:layout_gravity="center"
                app:civ_border_width="2dp"
                app:civ_border_color="#FF000000"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="10dp"
            app:cardCornerRadius="8dp"
            app:cardBackgroundColor="@color/white"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            >
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/first_name"
    style="@style/textviewstyle"
    />

        <EditText  android:id="@+id/etFirstName"
            android:hint="@string/first_name"
            android:inputType="text"
            style="@style/edittText_bg"
            android:drawableLeft="@drawable/user_symbol"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="10dp"
            app:cardCornerRadius="8dp"
            app:cardBackgroundColor="@color/white"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            >

            <TextView
                style="@style/textviewstyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_name" />

            <EditText  android:id="@+id/etLastName"
            android:hint="@string/last_name"
            android:inputType="text"
            style="@style/edittText_bg"
            android:drawableLeft="@drawable/user_symbol"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="10dp"
            app:cardCornerRadius="8dp"
            app:cardBackgroundColor="@color/white"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            style="@style/textviewstyle"
            />
        <EditText  android:id="@+id/etPhoneNo"
            android:hint="@string/phone_number"
            android:inputType="number"
            style="@style/edittText_bg"
            android:drawableLeft="@drawable/phone_android"  />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="10dp"
            app:cardCornerRadius="8dp"
            app:cardBackgroundColor="@color/white"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            style="@style/textviewstyle"
            />
        <EditText  android:id="@+id/etEmail"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            style="@style/edittText_bg"
            android:drawableLeft="@drawable/email_symbol"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:layout_marginLeft="10dp"
            style="@style/textviewstyle"
            />
        <RadioGroup  android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="24dp"
            >

            <RadioButton  android:id="@+id/rbMale"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/male"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"
                android:buttonTint="@color/black" />

            <RadioButton  android:id="@+id/rbFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"
                android:buttonTint="@color/black" />
        </RadioGroup>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="10dp"
            app:cardCornerRadius="8dp"
            app:cardBackgroundColor="@color/white"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            style="@style/textviewstyle"
            />
        <EditText  android:id="@+id/etPassword"
            android:hint="@string/password"
            android:inputType="textPassword"
            style="@style/edittText_bg"
            android:drawableLeft="@drawable/password"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="10dp"
            app:cardCornerRadius="8dp"
            app:cardBackgroundColor="@color/white"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password"
            style="@style/textviewstyle"
            />
        <EditText  android:id="@+id/etConformPassword"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            style="@style/edittText_bg"
            android:drawableLeft="@drawable/password"/>
        </androidx.cardview.widget.CardView>
        <Button
            android:id="@+id/btnRegister"
            style="@style/button_bg"
            android:background="@drawable/button_rounded"
            android:text="Next"
            android:textColor="@color/white"
            android:layout_marginBottom="25dp"
            />

    </LinearLayout>

</ScrollView>