<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".YourInfoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="16dp">

        <TextView  android:id="@+id/tvinfo"
            android:text="@string/info"
            style="@style/textView_bg"
            android:textColor="@android:color/black"
            android:layout_marginTop="24dp"/>


<TextView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:text="@string/education"
    android:textStyle="bold"
    android:textSize="25dp"
    android:layout_marginLeft="15dp"
    android:textColor="@color/black"
    />


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="10dp"
            app:cardCornerRadius="8dp"
            app:cardBackgroundColor="@color/white"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edu"
                style="@style/textviewstyle"
                />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp">

                <AutoCompleteTextView
                    android:id="@+id/drop1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="none"
                    android:textColorHint="#8E8E8E"
                    android:text="Select Your Qualification"
                    />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="10dp"
            app:cardCornerRadius="8dp"
            app:cardBackgroundColor="@color/white"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            >

            <TextView
                style="@style/textviewstyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yop" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp">

                <AutoCompleteTextView
                    android:id="@+id/drop2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="none"
                    android:textColorHint="#8E8E8E"
                    android:text="Enter Year Of Passing"
                    />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="10dp"
            app:cardCornerRadius="8dp"
            app:cardBackgroundColor="@color/white"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grade"
                style="@style/textviewstyle"
                />
            <EditText  android:id="@+id/etPhoneNo"
                android:hint="Enter Your Grade Or Percentage"
                android:inputType="number"
                style="@style/edittText_bg"
            />

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/prof"
            android:textStyle="bold"
            android:textSize="25dp"
            android:layout_marginLeft="15dp"
            android:textColor="@color/black"
            />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="10dp"
            app:cardCornerRadius="8dp"
            app:cardBackgroundColor="@color/white"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exp"
                style="@style/textviewstyle"
                />
            <EditText  android:id="@+id/etEmail"
                android:hint="Enter The Years Of Experience"
                android:inputType="textEmailAddress"
                style="@style/edittText_bg"
                />
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="10dp"
            app:cardCornerRadius="8dp"
            app:cardBackgroundColor="@color/white"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/designation"
                style="@style/textviewstyle"
                />
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp">

                <AutoCompleteTextView
                    android:id="@+id/drop3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="none"
                    android:textColorHint="#8E8E8E"
                    android:text="Select Designation"
                    />

            </com.google.android.material.textfield.TextInputLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="10dp"
            app:cardCornerRadius="8dp"
            app:cardBackgroundColor="@color/white"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/domain"
                style="@style/textviewstyle"
                />
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp">

                <AutoCompleteTextView
                    android:id="@+id/drop4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="none"
                    android:textColorHint="#8E8E8E"
                    android:text="Select Your Domain"
                    />

            </com.google.android.material.textfield.TextInputLayout>
        </androidx.cardview.widget.CardView>


<!--        <Button-->
<!--            android:id="@+id/btnRegister"-->
<!--            style="@style/button_bg"-->
<!--            android:background="@drawable/button_rounded"-->
<!--            android:text="Next"-->
<!--            android:textColor="@color/white"-->
<!--            android:layout_marginBottom="25dp"-->
<!--            />-->
        <LinearLayout
            android:id="@+id/LinearLayout02"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginBottom="25dp"
            android:layout_alignParentBottom="true">
            <Button android:id="@+id/Button02"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                style="@style/button_bg"
                android:textColor="@color/white"
                android:background="@drawable/button_rounded"
                android:layout_marginLeft="5dp"
                android:text="Previous">
            </Button>
            <Button android:id="@+id/Button03"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                style="@style/button_bg"
                android:textColor="@color/white"
                android:background="@drawable/button_rounded"
                android:layout_marginLeft="15dp"
                android:text="Next">
            </Button>
        </LinearLayout>

    </LinearLayout>


</ScrollView>